# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_measure_process_lib"
version = "1.0.2"
description = "Test, Measure and Process library. Framework for lab experiments."
readme = "README.md"
authors = [{ name = "RedLegJed", email = "rlj_github@nym.hush.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["lab", "test", "measurement","scientific","engineering"]
requires-python = ">=3.7"


[project.urls]
Homepage = "https://redlegjed.github.io/test_measure_process_lib/"
Github = "https://github.com/redlegjed/test_measure_process_lib"


[tool.setuptools.packages.find]
where = ["."]  # ["."] by default
exclude = ["unit_test","doc_source","docs"]  